Fixed case where a tab would not be painted when hovering in the overlap of two tabs.

Due to the tabs overlapping, more than one tab can return that the mouse is hovered over its bounds. This would cause |hovered_tab| to be overwritten and the previously hovered tab to not get painted. This change ensures that only one tab is ever considered "hovered". For two adjacent tabs that are hovered, the one on the left is favored.

The reason for all of this code in the first place is to ensure that the currently hovered background tab is always painted right before the active tab. This visually manifests as the hovered tab always painting "above" the adjacent tabs. The |last_hovered_tab_| field also ensures that when no tab is hovered anymore, the last hovered tab continues to be painted in the right order while the hover animation is still running.

Bug: 846429
Change-Id: I95723ba79f683a31f45a117bd0833a143073a46a
Reviewed-on: https://chromium-review.googlesource.com/1093734
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566170}
Former-commit-id: 0cc4260d031d608a3bd19ef4b6d8e527e2a25237